CSS/style.css
.roboto {
        font-family: 'Roboto', sans-serif;
}

.poppins {
    font-family: 'Poppins', sans-serif;
}

.mobile {
    display: none;
}

.btn-blu {
    color: #003E80;
}

.blue-font {
    color: #49c6e4;
}
.button-bg {
background-color: #fa4969;
}

#desktop {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 0 0;
  grid-template-areas:
    "side headr headr headr"
    "side content content content"
    "side content content content"
    "side about about about"
    "side contct contct contct";
}
.side { grid-area: side; }
.headr { grid-area: headr; }
.content { grid-area: content; }
.about { grid-area: about; }
.contct { grid-area: contct;}

.btn {
    border-radius: 70%;
}

.background {
    height: auto;
}

.bg {
    background-image: url("../IMG/island.jpg");
    background-repeat: no-repeat;
    background-position: bottom;
    background-size: cover;
    height: auto;
    border-bottom-left-radius: 60%;
}

.bg {
    clip-path: polygon(0 0, 100% 0, 100% 100%, 15% 80%);
}

.card-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 5% 5%;
    grid-template-areas:
      "card1 card2"
      "card3 card4";
  }
  .card1 { grid-area: card1; }
  .card2 { grid-area: card2; }
  .card3 { grid-area: card3; }
  .card4 { grid-area: card4; }

.card1 {
    background-image: url("../IMG/p/s1-f.jpg");
}

.card2 {
    background-image: url("../IMG/p1/s3-small-f.jpg");
}

.card3 {
    background-image: url("../IMG/p2/s1-f.jpg");
}

.card1,
.card2,
.card3,
.card4 {

    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    height: auto;
}

.card-elements {
    visibility: hidden;
}

.c-body:hover .card-elements{
    visibility: visible;
    transition: 0.5s;
}

.close {
    float: left;
}

.blue-bg {
    background: rgb(73,198,228);
    background: linear-gradient(309deg, rgba(73,198,228,1) 8%, rgba(138,226,244,0) 100%);
}

.gray-bg {
    background: #4F5461;
    border-radius: 6%;
}


.diagonal-bg {
    background: rgb(75,204,233);
    background: linear-gradient(146deg, rgba(75,204,233,1) 0%, rgba(64,82,240,0.15870098039215685) 100%);
    clip-path: polygon(26% 32%, 100% 0, 100% 100%, 0% 100%);
    height: 30em;  
}

.line {
    height: 0.01em;
    width: 100%;
    background-color: black;
    margin: auto;
}

.gray-card {
    background-color: #F5F8FD !important;
    margin: 5%;
}

.kont{
    transition-duration: 0.9s;
    height: 60%;
}

.content#card-blur.active {
    filter: blur(1.5rem);
}

#popup, #pop-up, #poppup {
    position:fixed;
    top: -5%;
    left: 20%;
    transform: translate(10%, 10%);
    width: 60%;
    height: auto;
    visibility: hidden;
    opacity: 0;
    transition: 0.9s;
}

#popup.active, #pop-up.active, #poppup.active {
    visibility: visible;
    opacity: 1;
    transition: 0.9s;
}

.icon-text {
    font-size: xxx-large;
}

.mini-icon-text {
    font-size: xx-large;
}

.micro-icon-text {
    font-size: x-large;
}

.nano-icon-text {
    font-size: large;
}

.img-big {
    height: auto;
}

.img-mini {
    height: 5em;
}

.img-petit {
    height: 10em;
}

.img-small {
    height: 15em;
}

.img-medium {
    height: 25em;
}

.cards-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 0 0;
  grid-template-areas:
    "carda cardb cardc"
    ". . ."
    ". . .";
}
.carda { grid-area: carda; }
.cardb { grid-area: cardb; }
.cardc { grid-area: cardc; }

.form-bg {
    float: right;
}

@media (max-width: 44em) {

    .bg {
    background-image: url("../IMG/island.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    border-bottom-left-radius: 0;
    }

    
    .bg {
        clip-path: none;
    }

    #desktop {
        display: none;
    }

    .mobile {
        display: initial;
    }

    #tablet {
        display: none;
    }

    .icon-text {
        font-size: xx-large;
    }
    
    .mini-icon-text {
        font-size: x-large;
    }
    
    .micro-icon-text {
        font-size: large;
    }

    .img-big {
        height: auto;
        width: auto;
    }

    .img-petit {
        height: 10em;
    }

    .img-medium {
        height: 20em;
    }

    .line {
        height: 0.01em;
        width: 80%;
        background-color: black;
        margin: auto;
    }

    .form-bg {
        background: rgb(75,204,233);
        background: linear-gradient(146deg, rgba(75,204,233,1) 0%, rgba(64,82,240,0.15870098039215685) 100%);
        float: none;
    }
}

